--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "request": "~2.69.0",
     "serve-favicon": "~2.3.0",
     "string": "^3.3.1",
+    "underscore": "^1.8.3",
     "yargs": "~3.32.0"
   },
   "main": "app.js"
