--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "CEWatcher",
-  "version": "1.0.1",
+  "name": "cewatcher",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
+    "async": "^2.4.0",
     "body-parser": "~1.13.2",
     "bootstrap": "~3.3.6",
     "check-types": "^7.0.0",
